--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@
 @import url('layout/header.css') layer(layout);
 @import url('layout/footer.css') layer(layout);
 
+@import url('components/lab.css') layer(components);
 @import url('components/buttons.css') layer(components);
 @import url('components/popovers.css') layer(components);
 @import url('components/resume.css') layer(components);
