--- a/styles/base/reset.css
+++ b/styles/base/reset.css
@@ -14,6 +14,10 @@ html {
     overflow-y: scroll;
 }
 
+@view-transition {
+    navigation: auto;
+}
+
 /* Remove default margin in favour of better control in authored CSS */
 body,
 h1,
