--- a/styles/components/lab.css
+++ b/styles/components/lab.css
@@ -9,6 +9,59 @@
     gap: 1.25cqi;
     margin-block: 20cqi;
 
+    & article {
+        animation: enter 0.6s var(--ease-3) forwards;
+        opacity: 0;
+    }
+
+    & article:nth-child(1) {
+        animation-delay: 0.6s;
+    }
+
+    & article:nth-child(2) {
+        animation-delay: 0.65s;
+    }
+
+    & article:nth-child(3) {
+        animation-delay: 0.7s;
+    }
+
+    & article:nth-child(4) {
+        animation-delay: 0.75s;
+    }
+
+    & article:nth-child(5) {
+        animation-delay: 0.8s;
+    }
+
+    & article:nth-child(6) {
+        animation-delay: 0.85s;
+    }
+
+    & article:nth-child(7) {
+        animation-delay: 0.9s;
+    }
+
+    & article:nth-child(8) {
+        animation-delay: 0.95s;
+    }
+
+    & article:nth-child(9) {
+        animation-delay: 1s;
+    }
+
+    & article:nth-child(10) {
+        animation-delay: 1.05s;
+    }
+
+    & article:nth-child(11) {
+        animation-delay: 1.1s;
+    }
+
+    & article:nth-child(12) {
+        animation-delay: 1.15s;
+    }
+
     & article>iframe {
         aspect-ratio: 1;
         block-size: 300px;
