--- a/styles/utilities/animations.css
+++ b/styles/utilities/animations.css
@@ -1,5 +1,11 @@
 @keyframes enter {
     from {
         opacity: 0;
+        transform: scale(0.9);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
     }
 }
