--- a/styles/components/popovers.css
+++ b/styles/components/popovers.css
@@ -76,6 +76,19 @@
     inline-size: max-content;
     max-inline-size: min(90%, 480px);
     translate: -8ch 0;
+    transition:
+        opacity var(--link-timing) var(--link-ease),
+        transform var(--link-timing) var(--link-ease),
+        display var(--link-timing) allow-discrete,
+        overlay var(--link-timing) allow-discrete;
+
+    opacity: 0;
+    transform: translateY(2rem);
+
+    &:popover-open {
+        opacity: 1;
+        transform: translateY(0);
+    }
 
     & div {
         overflow: hidden;
