make lab projects accegsible via tab

--- a/styles/components/lab.css
+++ b/styles/components/lab.css
@@ -18,6 +18,7 @@
         cursor: pointer;
 
         &:hover,
+        &:focus,
         &:focus-within {
             transform: translateY(-.75rem);
             z-index: 10;
