--- a/styles/components/media-player.css
+++ b/styles/components/media-player.css
@@ -43,21 +43,39 @@ body {
     text-align: left;
 }
 
-.media-player__meta__title {
+.media-player__meta__title,
+.media-player__meta__artist {
     font-weight: bold;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
     margin: 0;
+    width: 100%;
 }
 
 .media-player__meta__artist {
     font-weight: normal;
     color: oklch(from #ccc l c h);
+}
+
+.media-player__meta span {
+    display: inline-block;
     white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    margin: 0;
+    min-width: 100%;
+}
+
+/* Marquee Animation */
+.media-player__meta>.is-marquee span {
+    animation: marquee 8s linear infinite alternate;
+}
+
+@keyframes marquee {
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(calc(-100% + var(--marquee-width, 100%)));
+    }
 }
 
 /* --- Buttons --- */
@@ -144,11 +162,17 @@ body {
     0%,
     10%,
     100% {
-        box-shadow: 0 0 0px 0 oklch(from #ccc l c h / .76);
+        box-shadow:
+            0 0 0px 0 oklch(from #ccc l c h / .76),
+            inset 0 0 0 0 oklch(from #ccc l c h / 0),
+            inset 0 0 0 0 oklch(from #ccc l c h / 0);
     }
 
     4% {
-        box-shadow: 0 0 4px 0 oklch(from #ccc l c h / .76);
+        box-shadow:
+            0 0 6px 0 oklch(from #ccc l c h / .76),
+            inset 0 1px 2px 0 oklch(from #ccc l c h / 0.8),
+            inset 0 2px 2px 0 oklch(from #ccc l c h / 0.2);
     }
 }
 
@@ -163,8 +187,6 @@ body {
         opacity: 0;
     }
 }
-
-/* --- Special Functional Elements --- */
 
 /* Option/Mode Button */
 .media-player__controls__option {
